Fixed font and text alignment

--- a/src/components/Legend/CompanyColorLegend.module.scss
+++ b/src/components/Legend/CompanyColorLegend.module.scss
@@ -1,5 +1,3 @@
-@import '../../globalStyle.module.scss';
-
 .container{
 
     display:flex;
@@ -8,13 +6,14 @@
     .categoryRow{
 
         height:25px;
-        width:550px;
+        width:900px;
         // use margin to make space between the rows
-        //margin-top:1px;
-        //margin-left:1px;
-        //margin-right:50px;
-        //margin-bottom:25px;
-        line-height: 0px;
+        margin-top:2px;
+        margin-left:20px;
+        margin-right:60px;
+        margin-bottom:2px;
+
+        align-items: center;
 
         display:flex;
         flex-direction:row;
@@ -23,13 +22,17 @@
         justify-content: flex-start;
 
         .companyLabel{
+            @import '../../globalStyle.module.scss';
 
              // import kth font from globalStyles and use it to set font and font size here as well
 
              font-family: $font;
-             font-size: 2em;;
-             display: 'inline-block';
-             vertical-align: middle;
+             font-size: 1vw;
+             display: inline-block;
+             text-align: center;
+             margin-left:5px;
+             margin-top:1px;
+             //margin-bottom:30px;
 
         }
     }
